--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Venia E-Commerce",
+  "name": "venia",
   "version": "1.0.0",
   "description": "Product Listing Page",
   "homepage": ".",
